# ihub-pro-open

./: .gitattributes  .gitignore  CMakeLists.txt  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  README.md  gzip_dashboard.py  partitions.csv  platformio.ini  sdkconfig.defaults
.github/: FUNDING.yml
docs/: FLASHING.md  HANDBOOK.md
main/: CMakeLists.txt  app_config.h  app_main.c  appcfg.c  appcfg.h  auth.c  auth.h  bl0940.c  bl0940.h  ble_sensors.c  ble_sensors.h  board_pins.h  buttons.c  buttons.h  buzzer.c  buzzer.h  climate_config.c  climate_control.c  climate_control.h  climate_internal.h  devices.c  devices.h  dimmer.c  dimmer.h  ds1302.c  ds1302.h  history.c  history.h  i18n_js.h  idf_component.yml  modbus_master.c  modbus_master.h  mqtt_ha.c  mqtt_ha.h  nvsutil.c  nvsutil.h  oled.c  oled.h  ota.c  ota.h  (+27 more)
