idf_component_register(
    SRCS
        "app_main.c"
        "appcfg.c"
        "state.c"
        "nvsutil.c"
        "relays.c"
        "relay_sched.c"
        "watering.c"
        "water.c"
        "modbus_master.c"
        "devices.c"
        "dimmer.c"
        "bl0940.c"
        "ds1302.c"
        "buttons.c"
        "buzzer.c"
        "status_leds.c"
        "oled.c"
        "climate_config.c"
        "climate_control.c"
        "history.c"
        "wifi_conn.c"
        "wifi_portal.c"
        "ble_sensors.c"
        "mqtt_ha.c"
        "ota.c"
        "auth.c"
        "webui.c"
        "webui_control.c"
        "webui_settings.c"
        "webui_diag.c"
        "remote_log.c"
    INCLUDE_DIRS "."
    REQUIRES
        driver
        nvs_flash
        esp_partition
        esp_driver_uart
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_i2c
        esp_wifi
        esp_event
        esp_netif
        esp_timer
        mqtt
        esp_http_server
        app_update
        lwip
        bt
        mbedtls
)
